k8s/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-api
  namespace: api-dev
  labels:
    app: trips-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trips-api
  template:
    metadata:
      labels:
        app: trips-api
    spec:
      containers:
      - name: app-trips-api
        image: registrymjd9148.azurecr.io/tripinsights/trips:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: api-dev
  name: trips-api-service
spec:
  selector:
    app: trips-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
