k8s/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  labels:
    app: user-java
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: app-user-java
        image: registrymjd9148.azurecr.io/tripinsights/user-java:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: user-java-service
spec:
  selector:
    app: user-java
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
