k8s/userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: api-dev
  labels:
    app: userProfile
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: registrymjd9148.azurecr.io/tripinsights/userprofile:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
  namespace: api-dev
spec:
  selector:
     app: userprofile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
